Prevent layout shift & fix footer position

--- a/comssa/src/assets/css/footer.css
+++ b/comssa/src/assets/css/footer.css
@@ -4,6 +4,9 @@
     border-bottom: 10px solid #4559A7;
     width: 100%;
     height: 250px; 
+
+    position: fixed;
+    bottom: 0;
 }
 
 a {
